--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -6,7 +6,7 @@
    justify-content: center;
 }
 .container{
-   width: 82%;
+   width: 95%;
    display: flex;
    flex-direction: column;
    align-items: center;
@@ -17,7 +17,7 @@
    width: 100%;
 }
 
-$maxWidth: 1600;
+$maxWidth: 1440;
 
 @mixin adaptiveFont($pcSize, $mobSize) {
    $addSize: $pcSize - $mobSize;
@@ -28,4 +28,19 @@ $maxWidth: 1600;
    @media (min-width: 767px) {
       font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
    }
+}
+
+$font-family: 'Roboto', sans-serif;
+
+%flexCenter{
+   display: flex;
+   align-items: center;
+   justify-content: center;
+}
+
+%flexColumns{
+   display: flex;
+   flex-direction: column;
+   align-items: flex-start;
+   justify-content: flex-start;
 }
