--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,20 +24,20 @@ nav, footer, header, aside {
 }
 
 html, body {
-  height: 100%;
-  width: 100%;
-  font-size: 100%;
-  line-height: 1;
-  font-size: 10px;
-  font-family: 'Lato', sans-serif;
-  color: #121920;
-  // -ms-text-size-adjust: 100%;
-  // -moz-text-size-adjust: 100%;
-  // -webkit-text-size-adjust: 100%;
-  background-color: black;
-  display: flex;
-  justify-content: center;
-  scroll-behavior: smooth;
+   height: 100%;
+   width: 100%;
+   font-size: 100%;
+   line-height: 1;
+   font-size: 20px;
+   font-family: 'Roboto', sans-serif;
+   color: #fff;
+   // -ms-text-size-adjust: 100%;
+   // -moz-text-size-adjust: 100%;
+   // -webkit-text-size-adjust: 100%;
+   background-color: rgb(52, 53, 58);
+   display: flex;
+   justify-content: center;
+   scroll-behavior: smooth;
 }
 
 input, button, textarea {
@@ -78,4 +78,5 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: inherit;
 }
 
-@import "common.scss";
+@import "common";
+@import "header";
