--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -4,6 +4,8 @@
 .page {
    display: flex;
    justify-content: center;
+   backdrop-filter: blur(15px);
+   opacity: 0.8; 
 }
 .container{
    width: 95%;
