--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -2,26 +2,12 @@
    background-color: rgb(49, 51, 59);
    box-shadow: inset 0px 25px 15px rgba(0, 0, 0, 0.1);
 }
-.animated__page {
-}
 .about__container {
    padding: 3.5% 0;
-}
-.about__body {
 }
 .about__content {
    @extend %flexColumns;
    gap: 30px;
-}
-.about__content-title {
-}
-.about__title {
-   color: #FFF;
-   font-family: 'Roboto Slab', serif;
-   @include adaptiveFont(35, 30);
-   font-style: normal;
-   font-weight: 500;
-   line-height: 24px;
 }
 .about__content-subtitle {
    @extend %flexColumns;
@@ -39,7 +25,7 @@
    span {
       @include adaptiveFont(23, 19);
       font-weight: 400;
-      color: rgb(255, 200, 107);
+      color: $yellow;
    }
    &::before {
       content: '';
@@ -48,6 +34,6 @@
       left: 0;
       width: 40px;
       height: 3px;
-      background-color: rgb(255, 200, 107);
+      background-color: $yellow;
    }
 }
