--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -4,7 +4,7 @@
 .page {
    display: flex;
    justify-content: center;
-   opacity: 0.8; 
+   opacity: 0.6; 
 }
 .container{
    width: 95%;
@@ -17,31 +17,18 @@
    justify-content: space-between;
    width: 100%;
 }
-
-$maxWidth: 1440;
-
-@mixin adaptiveFont($pcSize, $mobSize) {
-   $addSize: $pcSize - $mobSize;
-   $addMobSize: $addSize + $addSize * 0.7;
-   @media (max-width: 767px) {
-      font-size: calc(#{$mobSize + px} + #{$addMobSize} * ((100vw - 320px) / #{$maxWidth}));
-   }
-   @media (min-width: 767px) {
-      font-size: calc(#{$mobSize + px} + #{$addSize} * (100vw / #{$maxWidth}));
-   }
+.content {
+   width: 100%;
+   padding: 3.5% 0;
 }
 
-$font-family: 'Roboto', sans-serif;
-
-%flexCenter{
-   display: flex;
-   align-items: center;
-   justify-content: center;
+.title {
+   color: #FFF;
+   font-family: 'Roboto Slab', serif;
+   @include adaptiveFont(35, 30);
+   @extend %fontStyleMedium;
 }
-
-%flexColumns{
-   display: flex;
-   flex-direction: column;
-   align-items: flex-start;
-   justify-content: flex-start;
+.center {
+   text-align: center;
+   margin-bottom: 30px;
 }
