--- a/src/scss/main-screen.scss
+++ b/src/scss/main-screen.scss
@@ -1,9 +1,3 @@
-.main-screen__page {
-}
-.animated__page {
-}
-.main-screen__container {
-}
 .main-screen__body {
    align-items: center;
    @media screen and (max-width: 768px) {
@@ -19,23 +13,17 @@
       align-items: center;
    }
 }
-.main-screen__content-title {
-}
 .main-screen__title {
    color: #FFF;
    font-family: $font-family;  
    @include adaptiveFont(26, 22);
-   font-style: normal;
-   font-weight: 500;
-   line-height: 24px;
+   @extend %fontStyleMedium;
    span {
       font-family: 'Roboto Slab', serif;
       @include adaptiveFont(35, 30);
       font-weight: 500;
-      color: rgb(255, 200, 107);
+      color: $yellow;
    }
-}
-.main-screen__content-subtitle {
 }
 .main-screen__subtitle {
    color: #FFF;
@@ -46,23 +34,22 @@
    line-height: 30px;
 }
 .main-screen__button {
-   border: 2px solid rgb(255, 200, 107);
-   border-radius: 10px;
-   background-color: inherit;
-   text-align: center;
+   @extend %btnHoverBorder;
    min-width: 230px;
    padding: 1.5% 1%;
    &:hover {
       opacity: 0.6;
+      background-color: $yellow;
    }
 }
 .main-screen__button-link {
-   color: rgb(255, 200, 107);
+   color: $yellow;
    font-family: $font-family;  
    @include adaptiveFont(22, 18);
-   font-style: normal;
-   font-weight: 500;
-   line-height: 24px;
+   @extend %fontStyleMedium;
+}
+.main-screen__button:hover .main-screen__button-link {
+   color: #000;
 }
 .main-screen__image {
    width: 100%;
