adding a block of experience and contacts

--- a/src/scss/portfolio.scss
+++ b/src/scss/portfolio.scss
@@ -6,6 +6,7 @@
    justify-content: space-between;
    flex-wrap: wrap;
    gap: 30px;
+   padding-bottom: 1.5%;
    @media screen and (max-width: 350px) {
       gap: 15px;
    }
