--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -4,7 +4,10 @@
 .page {
    display: flex;
    justify-content: center;
-   opacity: 0.6; 
+}
+.animated__page {
+   transform: translateX(-100%);
+   transition: transform 0.5s linear;
 }
 .container{
    width: 95%;
@@ -20,6 +23,9 @@
 .content {
    width: 100%;
    padding: 3.5% 0;
+   @media screen and (max-width: 425px) {
+      padding: 8% 0;
+   }
 }
 
 .title {
