--- a/src/scss/main-screen.scss
+++ b/src/scss/main-screen.scss
@@ -1,3 +1,6 @@
+.main-screen__page {
+   padding-top: 98px;
+}
 .main-screen__body {
    align-items: center;
    @media screen and (max-width: 768px) {
@@ -56,5 +59,5 @@
 }
 .main-screen__image-img {
    width: 100%;
-   opacity: 0.5;
+   opacity: 0.3;
 }
