--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -29,7 +29,7 @@
 }
 
 .title {
-   color: #FFF;
+   color: $white;
    font-family: 'Roboto Slab', serif;
    @include adaptiveFont(35, 30);
    @extend %fontStyleMedium;
