--- a/src/scss/experience.scss
+++ b/src/scss/experience.scss
@@ -3,23 +3,17 @@
    box-shadow: inset 0px -15px 15px rgba(52, 53, 58, 1),
                inset 0px 15px 15px rgba(49, 51, 59, 1);
 }
-.experience__container {
-}
 .experience__body {
    position: relative;
 }
 .experience__content {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
+   @extend %flexColumnCenter;
    gap: 20px;
 }
 .experience__content-title {
    position: absolute;
    top: -5px;
    left: 0;
-}
-.experience__title {
 }
 .experience__description {
    display: flex;
@@ -28,6 +22,9 @@
    @media screen and (max-width: 1024px) {
       width: 95%;
       padding-top: 5%;
+   }
+   @media screen and (max-width: 768px) {
+      gap: 20px;
    }
 }
 .description__year {
@@ -52,9 +49,7 @@
    }
 }
 .description__decor {
-   display: flex;
-   flex-direction: column;
-   align-items: center;
+   @extend %flexColumnCenter;
    gap: 20px;
    width: 8%;
 }
@@ -69,8 +64,6 @@
       left: 50%;
       transform: translateX(-50%);
       border-radius: 50px;
-      // background-color: rgb(238 181 24);
-      // box-shadow: 0 0 20px rgb(255 166 2);
       animation: flicker 3s infinite;
    }
    @keyframes flicker {
@@ -126,26 +119,20 @@
    }
 }
 .description__content {
-   display: flex;
-   flex-direction: column;
+   @extend %flexColumnCommon;
    gap: 18px;
-}
-.description__content-title {
 }
 .description__title {
    font-family: $font-family;  
    @extend %fontStyleMedium;
    @include adaptiveFont(26, 24);
 }
-.description__content-subtitle {
-}
 .description__subtitle {
    @extend %fontStyleRegular;
    @include adaptiveFont(24, 22);
 }
 .description__content-paragraph {
-   display: flex;
-   flex-direction: column;
+   @extend %flexColumnCommon;
    gap: 15px;
 }
 .description__paragraph {
