--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -83,7 +83,7 @@
          height: 2px;
          width: 100%;
          transition: all 0.3s ease 0s;
-         background-color: #fff;;
+         background-color: #fff;
       }
       &::before, &::after {
          content: "";
